--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
             height: 132px;
             background-color: #fff;
             position: relative;
+            padding-top: 22px;
+            box-sizing: border-box;
         }
 
         .banner .ban1Message p {
+            margin-bottom: 22px;
             margin-left: 31px;
-            margin-top: 22px;
         }
 
         .banner .ban1Message img {
@@ -191,7 +193,7 @@
             </div>
             <div class="ban1Message">
                 <p style="color:#333">Park View Mansions, Stratford E20</p>
-                <p>88.1公里距离, 15张照片.png</p>
+                <p>88.1公里距离, 15张照片</p>
                 <img src="icon/xiaofangzi.png" alt="">
             </div>
         </div>
